// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withBlockExtensions injects extensions as props 1`] = `
<div>
  <div>
    {"id":"default","title":"Default","isDefault":true}
  </div>
  <div>
    {"id":"small","isDefault":true}
  </div>
</div>
`;

exports[`withBlockExtensions resolve extensions according to data 1`] = `
<div>
  <div>
    {"id":"extra","title":"Extra"}
  </div>
  <div>
    {"id":"small","isDefault":true}
  </div>
</div>
`;
